--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
     background-color: rgb(129, 165, 177);
     font-family: sans-serif;
-
     margin: 0;
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
 
 }
 
@@ -74,4 +76,5 @@ nav a:hover{
 }
 footer{
     background-color: black;
+    
 }
