--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav a{
     font-weight: 600;
     padding-right: 10px;
     justify-content: flex-end;
-    
+    float: right;
 
 }
 nav a:hover{
