--- a/style.css
+++ b/style.css
@@ -60,16 +60,22 @@ body{
 }
 
 nav a{
-    border: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
     font-weight: 600;
-    padding-right: 10px;
+    padding-right: 20px;
+    padding-left: 20;
+    padding-inline: 10px;
     justify-content: flex-end;
     float: right;
+    
+    text-decoration: none;
 
 }
 nav a:hover{
     justify-content: flex-end;
     color: white;
+    
 }
 
 footer{
