--- a/style.css
+++ b/style.css
@@ -7,7 +7,23 @@ body{
     grid-template-rows: auto 1fr auto;
 
 }
-
+#seccion form input{
+    display: block;
+    margin-bottom: 10px;
+    width: 50%;
+    padding: 10px;
+    border: 0;
+    background-color: #E7F9FA;
+    color: dimgrey;
+}
+#seccion form textarea{
+display: block;
+width: 50%;
+padding: 10px;
+border: 0;
+background-color: #E7F9FA;
+color: dimgrey;
+}
 
 .contenedor{
     display: flex;
