--- a/style.css
+++ b/style.css
@@ -93,8 +93,19 @@ nav a:hover{
     color: white;
     
 }
-
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    
+}
+img{
+    width: 400px;
+}
 footer{
     background-color: rgb(73, 71, 71);
+    color: white;
 }
-
+section{
+    padding-left: 20px;
+    
+}
